--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start-server": "nodemon server.js",
     "start-client": "npm start --prefix client",
     "dev": "concurrently \"npm run start-server\" \"npm run start-client\""
-
   },
   "keywords": [
     "Node",
@@ -20,8 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
     "mongoose": "^5.12.11",
     "react-router-dom": "^5.2.0"
   },
