--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
+    "multer": "^1.4.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
