--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "multer": "^1.4.2",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
